Add new feature dashbord
